@@ -18,6 +18,9 @@
 - P4A_DB_Table::_setupPrimaryKey() method was added, it just calls
   the parent::_setupPrimaryKey() avoiding exceptions (used when the
   table has no primary keys)
+- P4A_DB_Source now supports database views within the setTable() method
+- P4A_DB_Source::load() now does not set pk if P4A_DB_Table does not
+  return one or more pk(s)
 
 3.0.0-rc2
 - a bug with P4A_Field::getAsCheckbox() method was solved
